K1J-1952: Add Spotless code formatter and reformat project (#473)